src/index2.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
/*boje
svijetlija: #ad85e9
tamnija: #9d66f0
zatamnjenje za gumb: #6d5197*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /*font-family: 'Montserrat', sans-serif;*/
    font-family: "Poetsen One", sans-serif;

}

body {
    background-image: url('pozadina.jpg');
    background-repeat: no-repeat;
    background-size: 100% 100%;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-direction: column;

    height: 100vh;
    width: 100vw;

    overflow: hidden;

}

.container {
    background-color: #fff;
    border-radius: 30px;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
    position: relative;
    overflow: hidden;


    width: 800px;
    max-width: 100%;
    min-height: 520px;
}

.button:hover {
    background-color: #6d5197;
}


.container p {
    font-size: 14px;
    line-height: 20px;
    letter-spacing: 0.3px;
    margin: 20px 0;
}

.container span {
    font-size: 12px;
}

.container a {
    color: #333;
    font-size: 13px;
    text-decoration: none;
    margin: 15px 0 10px;
}

.container button {
    background-color: #9d66f0;
    color: #fff;
    font-size: 12px;
    padding: 10px 45px;
    border: 1px solid transparent;
    border: 1px solid white;
    border-radius: 8px;
    font-weight: 600;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    margin-top: 10px;
    cursor: pointer;
    text-align: center;
    margin-left: 50px;
    margin-top: 1px;
    /*width: 185px;*/
    width: 200px;
}

#register {
    background-color: #9d66f0;
    color: #fff;
    font-size: 12px;
    padding: 10px 45px;
    border: 1px solid transparent;
    border: 1px solid white;
    border-radius: 8px;
    font-weight: 600;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    margin-top: 10px;
    margin-right: 50px;
    cursor: pointer;
    text-align: center;
    margin-top: 1px;
    /*width: 185px;*/
    width: 200px;
}

#register:hover {
    background-color: #6d5197;
}

.container button:hover {
    background-color: #6d5197;
}

.container form {
    background-color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 0 80px;
    height: 100%;
}

.container input {
    background-color: #eee;
    border: none;
    margin: 8px 0;
    padding: 10px 15px;
    font-size: 13px;
    border-radius: 8px;
    width: 100%;
    outline: none;
}


.form-container {
    position: absolute;
    right: 0;
    top: 0;
    height: 100%;
    width: 50%;
}
.form-container2 {
    position: absolute;
    top: 0;
    height: 100%;
    width: 50%;
}

.toggle-right {
    right: 0;
    transform: translateX(0);
}


.toggle-container {
    position: absolute;
    top: 0;
    right: 50%;
    width: 50%;
    height: 100%;
    overflow: hidden;
    border-radius: 0 150px 100px 0;
}

.toggle-container2 {
    position: absolute;
    top: 0;
    left: 50%;
    width: 50%;
    height: 100%;
    overflow: hidden;
    border-radius: 150px 0 0 100px;
}

.toggle {
    height: 100%;
    background: linear-gradient(to right, #9d66f0, #ad85e9);
    color: #fff;
    position: relative;
    height: 100%;
    width: 200%;
}

.toggle2 {
    height: 100%;
    background: linear-gradient(to left, #ad85e9, #9d66f0);
    color: #fff;
    position: relative;
    left: -100%;
    height: 100%;
    width: 200%;
}


.toggle-panel {
    position: absolute;
    width: 50%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 0 30px;
    text-align: center;
    top: 0;
}

.naslovna {
    display: flex;
    justify-content: center;
    align-items: center;
    align-content: center;
    height: 50vh;
}

.naslovniGumb {
    margin: 12%;
}

.nastavnik {
    height: 300px;
    width: 300px;
    
}

.ucenici {
    height: 300px;
    width: 300px;
    margin-right: 10px;
}

.desno {
    flex: 1;
    text-align: center;
    padding-top: 120px;

}

.lijevo {
    flex: 1;
    text-align: center;
    padding-top: 120px;
}

.logintxt {
    font-size: 42px;
}





/* ###################################################### */

.containerStudent {
    background-color: #fff;
    border-radius: 30px;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
    position: relative;
    overflow: hidden;


    width: 900px;
    height: 650px;
}

.student-login-container {
    text-align: center;
}


.student-login {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
    margin-top: 20px;
}

.student-login select {
    font-size: 16px;
    padding: 8px;
    margin-bottom: 8px;
    width: 100%;
    background-color: #fff;
    /*font-weight: bold;*/
    border-color: #9d66f0;
    border-width: 2px;
    border-radius: 10px;
    text-align: center;
    width: 20vw;
}

.tekst {
    font-size: 16px;
    padding: 8px;
    margin-bottom: 8px;
    width: 100%;
    background-color: #fff;
    font-weight: bold;
    border-color: #9d66f0;
    border-width: 2px;
    border-radius: 10px;
    text-align: center;
}

.toggleStudent {
    height: 100%;
    background: linear-gradient(to left, #9d66f0, #ad85e9);
    color: #fff;
    position: relative;
    height: 100%;
    width: 200%;
}

.toggle-containerStudent {
    position: absolute;
    top: 0;
    right: 60%;
    width: 40%;
    height: 100%;
    overflow: hidden;
    border-radius: 0 150px 100px 0;
}

.ucenikLogin {
    width: 250px;
    height: 250px;
}

.form-containerStudent {
    margin: 20px auto;
    padding-left: 350px;
    
}
/* ... */

